Primeiro HTML atualizado

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
-    <a href="https://www.doctoralia.com.br/louise-rodrigues-2/nutricionista/porto-alegre"> Sobre mim</a>
+    <a href="https://www.doctoralia.com.br/louise-rodrigues-2/nutricionista/porto-alegre"> Sobre mim Teste</a>
     <br/>
     <a href="https://canaltech.com.br/meio-ambiente/os-10-animais-mais-bonitos-do-mundo/"> O que eu gosto</a>
+    <br>
     <h1 class= "LouiseCereziniRodrigues"Tryber> </h1>
-    <img src="./IMG-9865.jpg" width="300px" id="minha-foto">
-    <p class="descricao"> Eu sou a Louise, estou em transição de carreira e estou feliz em começar a Trybe <strong><em>
-    <p class="resido"><strong> Winnipeg- Manitoba</strong></p>
+    <img src="./IMG-9865.jpg" width="200px" id="minha-foto">
+    <p class="descricao"> <strong>Sobre mim: Ola!! Eu sou a Louise e estou em transição de carreira. Feliz em começar essa nova jornada com a Trybe </strong>
+    <p class="resido"> Localização: Winnipeg- Manitoba </p>
     
-    <h3>Lista de habilidades</h2>
+    <h3>Lista de habilidades:</h3>
     <ul>
         <li class="Javascript">Javascript</li>
         <li class="sql">SQL</li>
