--- a/index.html
+++ b/index.html
@@ -12,26 +12,43 @@
 </head>
 
 <body>
-    <a href="https://www.escavador.com/sobre/5519198/louise-cerezini-rodrigues"> Sobre mim </a>
-    <br />
-    <a href="https://canaltech.com.br/meio-ambiente/os-10-animais-mais-bonitos-do-mundo/"> O que eu gosto</a>
-    <br>
-    <h1 class="LouiseCereziniRodrigues" Tryber> </h1>
-    <img src="./IMG-9865.jpg" width="200px" id="minha-foto">
-    <p id="sobre-mim" class="descricao">
-        <strong>
-            <span class="ola">Olá!</span> "Eu sou a Louise e estou em transição de carreira. <br>
-            Feliz em começar essa nova jornada com a Trybe.
-        </strong>
-    </p>
-    <p> <strong> Localização:Winnipeg- Manitoba  </strong></p>
+    <div class="top-links">
+        <a href="https://www.escavador.com/sobre/5519198/louise-cerezini-rodrigues"> Sobre mim </a>
+        <br />
+        <a href="https://canaltech.com.br/meio-ambiente/os-10-animais-mais-bonitos-do-mundo/"> Sobre o que eu gosto</a>
+    </div>
 
+    <br>
+
+    <h1 class="LouiseCereziniRodrigues" Tryber> </h1>
+
+    <img src="./IMG-9865.jpg" width="200px" id="minha-foto">
+
+    <p id="sobre-mim" class="descricao">
+
+        <span class="ola">Olá!Bem vindo ao meu Portfólio! </span> <br>
+    <p>Eu sou a Louise e estou em transição de carreira. <br>
+        Sou paulista com o coração gaúcho e canadense (morei muitos anos em Porto Alegre e hoje moro no Canadá).
+        Feliz em começar essa nova jornada com a Trybe.
+        Eu amo animais, tenho 1 cachorro chamado Bolt que já viajou bastante comigo.
+        Adoro experimentar comidas de outras culturas (indiana,canadense,arabe,mexicana..mas a melhor é a brasileira).<br>
+        Eu adoro assistir jogos de futebol e ja trabalhei em clube profissional no Brasil.
+        Meu objetivo e me tornar uma desenvolvedora, estou no caminho.<br>
+        Até mais!!!
+    </p>
+
+
+    </p><br>
+    <p>
+    <div class="localization"> Localização:Winnipeg- Manitoba </p>
+    </div>
+    <br>
 
     <h3 class="titulo3">Lista de habilidades:</h3>
     <div class="list-div">
         <ul class="list-style">
             <li class="Aprendendo a programar">Aprendendo a programar</li>
-            <li class="Comunicação">Comunicação</li>
+            <li class="Aprendendo Javascript">Aprendendo Javascript</li>
             <li class="Aprendendo html">Aprendendo html</li>
             <li class="Aprendendo css">Aprendendo CSS</li>
             <br>
@@ -56,11 +73,15 @@
     <a href="#minha-foto" class="link-foto">Minha foto</a> <br>
 
     <a href="https://www.slice.ca/10-things-you-might-not-know-about-winnipeg/" class="link-foto" target="_blank">Artigo
-        Winnipeg</a>
+        sobre Winnipeg</a>
+
 
 </body>
 
 <footer>
-    Portfólio Louise Cerezini Rodrigues 
+    <div class="footer">
+        Portfólio Louise Cerezini Rodrigues
 </footer>
+</div>
+
 </html>
